--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*"],
-  "exclude": ["src/**/__tests__/**/*"]
+  "exclude": ["src/**/__tests__/**/*", "src/**/stories/**/*"]
 }
