--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "@babel/core": "^7.18.5",
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
+    "@emotion/jest": "^11.9.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -68,6 +71,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^28.1.1",
+    "@types/jest-axe": "^3.5.4",
     "@types/node": "^17.0.43",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
@@ -91,6 +95,7 @@
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "jest": "^28.1.1",
+    "jest-axe": "^6.0.0",
     "jest-environment-jsdom": "^28.1.1",
     "lint-staged": "^13.0.1",
     "npm-run-all": "^4.1.5",
@@ -105,6 +110,8 @@
     "typescript": "^4.7.3"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "publishConfig": {
