--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '16'
           cache: 'npm'
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
       - name: Run build
         run: npm run build
       - name: Upload build artifacts
@@ -44,7 +44,7 @@ jobs:
           node-version: '16'
           cache: 'npm'
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
       - name: Run lint
         run: npm run lint
   test:
@@ -58,7 +58,7 @@ jobs:
           node-version: '16'
           cache: 'npm'
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
       - name: Run test:coverage
         run: npm run test:coverage
       - name: Upload coverage report
@@ -98,7 +98,7 @@ jobs:
           node-version: '16'
           cache: 'npm'
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci
       - name: Download build artifacts
         uses: actions/download-artifact@v2
         with:
